unpackaged/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Sub Departments</relationshipLabel>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>Main_Department</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Department__c</field>
            <operation>equals</operation>
        </filters>
        <label>Main Department</label>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>